some updates to make it work how I want to
